[package]
name = "tip-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "4.0.2"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
rand = "0.8.4"
tokio = {version = "1.13.0", features = ["full"]}
